ソート保持と本文詳細の画面の制御 by高野

--- a/src/main/resources/templates/searchResults.html
+++ b/src/main/resources/templates/searchResults.html
@@ -36,6 +36,9 @@ a.disabled {
 	font-size: 18px;
 	color: red;
 }
+.mgr-20{
+	margin-right : 20px;
+}
 </style>
 </head>
 <body>
@@ -53,6 +56,9 @@ a.disabled {
 ${paging.totalRecordNum} + #{view.label.incase}
 + ${paging.fromRecordNum} + #{view.label.tilde}
 + ${paging.toRecordNum} + #{view.label.preview}"></p>
+		<a th:href="@{'/humanresource'}" th:text="#{view.btn.humanresource}"></a><span class="mgr-20"></span>
+		<a th:href="@{'/work'}" th:text="#{view.btn.work}"></a>
+		<p></p>
 		<p th:text="#{view.label.freeword}">
 			</th:text>
 		<form th:action="@{/sresults}" th:object="${searching}" method="post">
@@ -63,8 +69,6 @@ ${paging.totalRecordNum} + #{view.label.incase}
 				<p th:text="#{view.btn.search}">
 			</button>
 		</form>
-		<a th:href="@{'/humanresource'}" th:text="#{view.btn.humanresource}"></a>
-		<a th:href="@{'/work'}" th:text="#{view.btn.work}"></a>
 		<div class="ui hidden divider"></div>
 		<div class="ui divider"></div>
 		<form th:action="@{/result}" th:object="${test}" method="post">
@@ -94,7 +98,6 @@ ${paging.totalRecordNum} + #{view.label.incase}
 				<tbody>
 					<tr th:each="list : ${sResults}" th:object="${list}">
 						<th:block th:each="nakami, stat: ${list}">
-							<!-- <td th:if="${stat.index < columnlength}" th:title="${nakami}" th:text="${nakami}"></td> -->
 							<th:block th:if="${stat.index < columnlength}">
 								<th:block th:if="${stat.index == 6 || stat.index == 7 || stat.index == 8}">
 									<td th:title="${nakami}" th:text="${nakami}"></td>
