--- a/src/main/resources/templates/display.html
+++ b/src/main/resources/templates/display.html
@@ -6,30 +6,47 @@
 <title th:text="#{view.btn.details}"></title>
 <link rel="stylesheet" href="./css/semantic.min.css">
 <style>
+.sampleTable {
+	max-width: 1125px;
+	margin-bottom: 15px;
+	border-collapse: collapse;
+	table-layout: fixed;
+}
+.sampleTable th,
+.sampleTable td {
+	border: 1px solid #CCCCCC;
+	padding: 10px 10px;
+	text-align: left;
+	max-width: 700px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: normal;
+	word-wrap:break-word;
+}
+.sampleTable th {
+	background-color: #F9FAFB;
+}
 </style>
 </head>
 <body>
 <div class="ui hidden divider"></div>
 	<div class="ui text container">
-		<form th:action="@{/return}" method="post">
-			<table class="ui single line table">
+			<table class="sampleTable">
 				<thead>
 					<tr>
-						<th><p th:text="#{view.btn.details}"></p></th>
+						<th width="700" th:text="#{view.btn.details}"></th>
 					</tr>
 				</thead>
 				<tbody>
 					<tr>
-						<td><p th:text="${text}"></p></td>
+						<td th:text="${text}"></td>
 					</tr>
 				</tbody>
 			</table>
 			<input type="hidden" name="keepword" th:value="${word}">
-			<button class="ui button" type="submit" name="fromdisplay"
-				th:value="*{page}">
+			<button class="ui button" type="button" onclick="history.back()">
 				<p th:text="#{view.btn.return}"></p>
 			</button>
-		</form>
 	</div>
 </body>
 </html>
